<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:background="@drawable/backgrounddt"
    tools:context=".MainFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="325dp"
        android:layout_height="142dp"
        android:text="@string/TagLine"
        android:textSize="50sp"
        android:layout_marginTop="10sp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="312dp"
        android:layout_height="49dp"
        android:layout_marginTop="10sp"
        android:layout_marginStart="10dp"
        android:background="@drawable/searchviewbg"
        android:iconifiedByDefault="false"
        android:text="@string/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/near_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/near_restaurant"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_all"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/drinkListRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        tools:listitem="@layout/drinkcard"
        app:layout_constraintTop_toBottomOf="@+id/near_restaurant" />
</androidx.constraintlayout.widget.ConstraintLayout>